feat: Add `generateIndex` attribute to particle sets, so that the index can be omitted for sets that do not need it (which is most of them).